# ruststarter

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  TESTED.md  TODO.md  clippy.toml  compose.yaml  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: ci.yaml
config/: config.example.yaml
crates/app-core/: Cargo.toml
crates/app-core/src/: config.rs  crypto.rs  error.rs  extractors.rs  jwt.rs  lib.rs  mail.rs  middleware.rs  oauth.rs  password.rs  rejection.rs  response.rs  storage.rs  time.rs  uid.rs
crates/app-orm/: Cargo.toml
crates/app-orm/src/entities/: mfa_backup_codes.rs  mfa_factors.rs  mod.rs  permissions.rs  prelude.rs  roles.rs  user_connections.rs  user_roles.rs  user_verifications.rs  users.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/auth/src/domain/: mod.rs
crates/auth/src/domain/entity/: mfa.rs  mod.rs  oauth.rs  user.rs  user_verifcation.rs
crates/auth/src/domain/inout/: authn.rs  authz.rs  mod.rs  profile.rs
crates/auth/src/inbound/: mod.rs  router.rs  state.rs
crates/auth/src/inbound/http/: authn.rs  authz.rs  mod.rs  profile.rs
crates/auth/src/inbound/model/: authn.rs  authz.rs  prelude.rs  profile.rs
crates/auth/src/outbound/: mod.rs  orm.rs  repository.rs  session.rs
crates/auth/src/usecase/: authn.rs  authz.rs  profile.rs
docs/: README.md
docs/sequences/: login.mmd
migrations/: 00001_initial.sql
src/: lib.rs  main.rs
src/app/: config.rs  error.rs  extractors.rs  jwt.rs  middleware.rs  mod.rs  oauthold.rs  password.rs  rejection.rs  response.rs  router.rs  state.rs  storage.rs  uid.rs
src/app/oauth/: mod.rs
src/auth/: mod.rs  state.rs
src/auth/domain/: authn.rs  authz.rs  connection.rs  mfa.rs  mod.rs  profile.rs  user.rs
src/auth/domain/entity/: mfa.rs  mod.rs  oauth.rs  user.rs  user_connection.rs  user_credential.rs
src/auth/domain/inout/: authn.rs  authz.rs  profile.rs
src/auth/inbound/: authn_http.rs  authn_model.rs  authz_http.rs  authz_model.rs  mod.rs  profile_http.rs  profile_model.rs  router.rs  state.rs
src/auth/inbound/http/: authn.rs  authz.rs  profile.rs
src/auth/inbound/model/: authn.rs  authz.rs  mod.rs  profile.rs
src/auth/outbound/: mod.rs  model.rs  orm.rs  repository.rs  session.rs  sql.rs
src/auth/usecase/: authn.rs  authz.rs  profile.rs
src/orm/: goose_db_version.rs  mod.rs  permissions.rs  prelude.rs  role_permissions.rs  roles.rs  user_connections.rs  user_credentials.rs  users.rs
