[package]
name = "ruststarter"
version = "0.1.0"
edition = "2024"
description = "A production-ready authentication and authorization server."
license = "MIT"
repository = "https://github.com/shandysiswandi/ruststarter"
readme = "README.md"

# -----------------------------------------------------------------------------
# Workspace Members
# -----------------------------------------------------------------------------
[workspace]
members = ["crates/app-core", "crates/app-orm", "crates/auth", "."]

# -----------------------------------------------------------------------------
# Workspace Shared Dependencies
# -----------------------------------------------------------------------------
[workspace.dependencies]
# --- Async runtime & server ---
async-trait = "0.1.89"
tokio = { version = "1.47.1", features = ["full"] }
axum = { version = "0.8.4", features = ["macros", "multipart"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
tower = { version = "0.5.2", features = ["timeout", "util"] }
tower-http = { version = "0.6.6", features = [
    "compression-full",
    "cors",
    "decompression-full",
    "trace",
    "timeout",
] }
tower-cookies = { version = "0.11.0", features = ["private"] }

# --- Instrumentation ---
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
log = "0.4.27"

# --- Auth & security ---
oauth2 = "5.0.0"
totp-rs = { version = "5.7.0", features = [
    "qr",
    "serde_support",
    "gen_secret",
] }
uuid = { version = "1.18.0", features = ["v4"] }
base64 = "0.22.1"

# --- Serialization & validation ---
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
validator = { version = "0.20.0", features = ["derive"] }

# --- Database & storage ---
sea-orm = { version = "1.1.14", features = [
    "sqlx-postgres",
    "sqlx-dep",
    "runtime-tokio-rustls",
    "macros",
    "mock",
] }
bb8 = "0.9.0"
bb8-redis = "0.24.0"
redis = { version = "0.32.5", features = ["tokio-comp"] }

# --- HTTP & networking ---
reqwest = { version = "0.12.23", features = ["json"] }
mime_guess = "2.0.5"

# --- Time & date ---
chrono = "0.4.41"

# local
app-core = { path = "crates/app-core", features = [
    "storage-local",
    "mail-local",
] }
app-orm = { path = "crates/app-orm" }
auth = { path = "crates/auth" }

# dev-dependencies
mockall = "0.13.1"
sea-orm-cli = "1.1.14"

# -----------------------------------------------------------------------------
# Dependencies
# -----------------------------------------------------------------------------
[dependencies]
# local
app-core = { workspace = true }
app-orm = { workspace = true }
auth = { workspace = true }
# third party
base64 = { workspace = true }
axum = { workspace = true }
log = { workspace = true }
bb8 = { workspace = true }
bb8-redis = { workspace = true }
sea-orm = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-cookies = { workspace = true }
tower-http = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# -----------------------------------------------------------------------------
# Release Profile - Optimized for Production
# -----------------------------------------------------------------------------
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
# Additional size optimizations
overflow-checks = false  # Disable overflow checks in release
debug = false            # No debug info
debug-assertions = false # Disable debug assertions
incremental = false      # Disable incremental compilation for smaller binaries
