[package]
name = "app-core"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
tower = { workspace = true }
axum-extra = { workspace = true }
argon2 = "0.5.3"
bb8-redis = { workspace = true }
thiserror = "2.0.12"
jsonwebtoken = "9.3.1"
oauth2 = { workspace = true }
totp-rs = { workspace = true }
config = { version = "0.15.13", features = ["yaml"] }
serde = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }
reqwest = { workspace = true }
notify = "8.2.0"
tempfile = "3.20.0"
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sea-orm = { workspace = true }
redis = { workspace = true }
aws-config = { version = "1.8.3", optional = true }
aws-sdk-s3 = { version = "1.100.0", optional = true }
google-cloud-storage = { version = "0.24.0", optional = true }
tower-cookies = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }
lettre = "0.11.18"
pbkdf2 = "0.12.2"
sha2 = "0.10.9"
aes-gcm = "0.10.3"
aes = "0.8.4"
rand = "0.9.2"
mockall = { workspace = true, optional = true }

# -----------------------------------------------------------------------------
# Feature Flags
# -----------------------------------------------------------------------------
[features]
default = ["storage-local", "mail-local", "testing"]
testing = ["dep:mockall"]
mail-local = []
storage-local = []
storage-aws = ["dep:aws-config", "dep:aws-sdk-s3"]
storage-gcp = ["dep:google-cloud-storage"]
